[package]
name = "todo-app"
version = "0.1.0"
edition = "2021"
authors = ["Night Cruising"]
license = "MIT"
description = ""
readme = "README.md"
repository = "https://github.com/night-cruise/todo-app"
#categories = [""]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19.3"

