[package]
name = "todo-app"
version = "0.1.0"
edition = "2021"
authors = ["Night Cruising"]
license = "MIT"
description = "A simple todo app implemented with Yew."
readme = "README.md"
repository = "https://github.com/night-cruise/todo-app"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19.3"
web-sys = { version="0.3.56", features=["HtmlInputElement"] }
gloo = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
